2004-10-19  Johan Dahlin  <johan@gnome.org>

	* data/glade/Makefile.am:
	* data/glade/wizard.glade:
	* data/glade/wizard_audio_encoder.glade:
	* data/glade/wizard_disk.glade:
	* data/glade/wizard_license.glade:
	* data/glade/wizard_smoke.glade:
	* data/glade/wizard_summary.glade:
	* flumotion/wizard/steps.py:
	* flumotion/wizard/wizard.py:

	Add a summary step, tweak audio_encoder to show quality for vorbis
	Change the disk button into an entry
	Increase the size of the wizard slightly
	
2004-10-18  Wim Taymans  <wim@fluendo.com>

	* conf/dv-ogg-theora-vorbis.xml:
	* flumotion/manager/main.py:
	Added ogg theora vorbis example
	Fix correct var for the filename.

2004-10-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* conf/Makefile.am:
	* data/glade/Makefile.am:
	* flumotion.spec.in:
	  updates
	* flumotion/component/bouncers/Makefile.am:
	* flumotion/component/converters/overlay/overlay.py:
	  import correctly, use tempfile
	* flumotion/manager/main.py:

2004-10-18  Johan Dahlin  <johan@gnome.org>

	* data/glade/wizard_audiotest.glade:
	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/main.py:
	* flumotion/manager/admin.py:
	* flumotion/manager/worker.py:
	* flumotion/wizard/enums.py:
	* flumotion/wizard/steps.py:
	* flumotion/wizard/wizard.py:
	* flumotion/worker/worker.py:
	add some checks for some elements, not using the result just yet.
	
2004-10-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/Makefile.am:
	* conf/flows/ogg-test-theora.xml:
	* configure.ac:
	* doc/random/service:
	* flumotion/manager/main.py:
	  make manager start up multiple xml files

2004-10-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* flumotion/component/Makefile.am:
	* flumotion/component/converters/Makefile.am:
	* flumotion/component/converters/__init__.py:
	* flumotion/component/converters/overlay/Makefile.am:
	* flumotion/component/converters/overlay/__init__.py:
	* flumotion/component/converters/overlay/genimg.py: