@@ -2,6 +2,7 @@
 <!DOCTYPE glade-interface SYSTEM "http://glade.gnome.org/glade-2.0.dtd">
 
 <glade-interface>
+<requires lib="gnome"/>
 
 <widget class="GtkWindow" id="window1">
   <property name="title" translatable="yes">window1</property>
@@ -20,16 +21,16 @@
     <widget class="GtkTable" id="table1">
       <property name="border_width">6</property>
       <property name="visible">True</property>
-      <property name="n_rows">1</property>
+      <property name="n_rows">2</property>
       <property name="n_columns">3</property>
       <property name="homogeneous">False</property>
       <property name="row_spacing">6</property>
       <property name="column_spacing">6</property>
 
       <child>
-	<widget class="GtkLabel" id="label_bitrate">
+	<widget class="GtkLabel" id="label4">
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">Bit rate:</property>
+	  <property name="label" translatable="yes">kbps/s</property>
 	  <property name="use_underline">False</property>
 	  <property name="use_markup">False</property>
 	  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -41,8 +42,8 @@
 	  <property name="ypad">0</property>
 	</widget>
 	<packing>
-	  <property name="left_attach">0</property>
-	  <property name="right_attach">1</property>
+	  <property name="left_attach">2</property>
+	  <property name="right_attach">3</property>
 	  <property name="top_attach">0</property>
 	  <property name="bottom_attach">1</property>
 	  <property name="x_options">fill</property>
@@ -60,7 +61,7 @@
 	  <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 	  <property name="snap_to_ticks">False</property>
 	  <property name="wrap">False</property>
-	  <property name="adjustment">1 0 1e+08 1 10 10</property>
+	  <property name="adjustment">32 0 2000 1 10 10</property>
 	</widget>
 	<packing>
 	  <property name="left_attach">1</property>
@@ -73,24 +74,70 @@
       </child>
 
       <child>
-	<widget class="GtkLabel" id="label2">
+	<widget class="GtkSpinButton" id="spinbutton_quality">
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">kbps</property>
-	  <property name="use_underline">False</property>
-	  <property name="use_markup">False</property>
-	  <property name="justify">GTK_JUSTIFY_LEFT</property>
+	  <property name="sensitive">False</property>
+	  <property name="can_focus">True</property>
+	  <property name="climb_rate">1</property>
+	  <property name="digits">0</property>
+	  <property name="numeric">False</property>
+	  <property name="update_policy">GTK_UPDATE_ALWAYS</property>
+	  <property name="snap_to_ticks">False</property>
 	  <property name="wrap">False</property>
-	  <property name="selectable">False</property>
-	  <property name="xalign">0</property>
-	  <property name="yalign">0.5</property>
-	  <property name="xpad">0</property>
-	  <property name="ypad">0</property>
+	  <property name="adjustment">16 0 63 1 10 10</property>
 	</widget>
 	<packing>
-	  <property name="left_attach">2</property>
-	  <property name="right_attach">3</property>
+	  <property name="left_attach">1</property>
+	  <property name="right_attach">2</property>
+	  <property name="top_attach">1</property>
+	  <property name="bottom_attach">2</property>
+	  <property name="x_options">fill</property>
+	  <property name="y_options"></property>
+	</packing>
+      </child>
+
+      <child>
+	<widget class="GtkRadioButton" id="radiobutton_bitrate">
+	  <property name="visible">True</property>
+	  <property name="can_focus">True</property>
+	  <property name="label" translatable="yes">Bit rate:</property>
+	  <property name="use_underline">True</property>
+	  <property name="relief">GTK_RELIEF_NORMAL</property>
+	  <property name="focus_on_click">True</property>
+	  <property name="active">False</property>
+	  <property name="inconsistent">False</property>
+	  <property name="draw_indicator">True</property>
+	  <signal name="toggled" handler="on_radiobutton_toggled" last_modification_time="Thu, 30 Sep 2004 09:40:19 GMT"/>
+	</widget>
+	<packing>
+	  <property name="left_attach">0</property>
+	  <property name="right_attach">1</property>
 	  <property name="top_attach">0</property>
 	  <property name="bottom_attach">1</property>
+	  <property name="x_options">fill</property>
+	  <property name="y_options"></property>
+	</packing>
+      </child>
+
+      <child>
+	<widget class="GtkRadioButton" id="radiobutton_quality">
+	  <property name="visible">True</property>
+	  <property name="can_focus">True</property>
+	  <property name="label" translatable="yes">Quality:</property>
+	  <property name="use_underline">True</property>
+	  <property name="relief">GTK_RELIEF_NORMAL</property>
+	  <property name="focus_on_click">True</property>
+	  <property name="active">False</property>
+	  <property name="inconsistent">False</property>
+	  <property name="draw_indicator">True</property>
+	  <property name="group">radiobutton_bitrate</property>
+	  <signal name="toggled" handler="on_radiobutton_toggled" last_modification_time="Thu, 30 Sep 2004 09:39:24 GMT"/>
+	</widget>
+	<packing>
+	  <property name="left_attach">0</property>
+	  <property name="right_attach">1</property>
+	  <property name="top_attach">1</property>
+	  <property name="bottom_attach">2</property>
 	  <property name="x_options">fill</property>
 	  <property name="y_options"></property>
 	</packing>
